ISSUE: 708  PURPOSE: Taxonomy: Taxonomy Search DESC: Check API, check styles, implement any needed functionality == accordion open and close symbols:  Tested before and after but that determines the position of hte symbol in relation to the content.  I also tried putting collapsed before open in the cascade but that didn't work.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1545,6 +1545,7 @@ textarea {
 	transform:rotate(-90deg);margin-top:2px;
 }*/
 .card-header h3 a.collapsed:before, .card-header h2 a.collapsed:before {
+	font-family: "Font Awesome 5 Free"; font-weight: 900;
     float:left !important;
     content:"\f067";
 }
